# Modeling-project

./: .gitignore  README.md
MATLAB/: Connection.m  Point.m  calculateForce.m  connection2massIndex.m  connection2massIndices.m  connectionInDir.m  connection_based_2D.m  massIndexOfNeighbor.m  massIndices2connectionIndices.m  mass_spring_damper2D_algorithm.m  matlab.mat  neighborIndex2offset.m  simple_mass_spring_damper1D.m  simple_mass_spring_damper1D_algorithm.m  test_Point.m  test_massIndices.m  test_simple_2D_OO.m
Ny Rapport/: .gitignore  rapport.aux  rapport.lof  rapport.lot  rapport.out  rapport.tex  rapport.toc
Rapport/: .gitignore  reportsam.aux  reportsam.lof  reportsam.lot  reportsam.tex  reportsam.toc
cpp/: CMakeLists.txt  Makefile  README.md  makefile  program
cpp/data/shaders/: simple.frag  simple.vert
cpp/include/: Connection.h  ConnectionData.h  Drawable.h  ElasticMaterials_lib.h  MCS.h  MatrixHandler.h  Models.h  NumericalMethods.h  Particle.h  connection2massindices.h  conversions.h  debugtools.h  test.h  texture.h  user_input.h
cpp/include/ElasticMaterials_lib/: HelperClasses.h  MCS.h  MatrixHandler.h  NumericalMethods.h  conversions.h
cpp/src/: Connection.cpp  Drawable.cpp  MCS.cpp  MatrixHandler.cpp  NumericalMethods.cpp  Particle.cpp  connection2massindices.cpp  conversions.cpp  main.cpp  models  models.cpp  shader.cpp  test.cpp  texture.cpp  user_input.cpp
cpp/src/ElasticMaterials_lib/: HelperClasses.cpp  MCS.cpp  MatrixHandler.cpp  NumericalMethods.cpp  conversions.cpp
cpp/test/: test.cpp
